<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.LoginActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/pc_login"
            android:contentDescription="@string/sample_login" />

        <TextView
            android:id="@+id/tv_welcome"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/greet_welcome"
            android:gravity="center"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintEnd_toEndOf="@id/imageView"/>

        <com.example.storyapp.customview.Email
            android:id="@+id/edt_email"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_welcome"
            app:layout_constraintStart_toStartOf="@+id/tv_welcome"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome"/>

        <com.example.storyapp.customview.Passsword
            android:id="@+id/edt_password"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="@+id/edt_email"
            app:layout_constraintStart_toStartOf="@+id/edt_email"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <CheckBox
            android:id="@+id/check"
            android:alpha="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/check_login"
            app:layout_constraintStart_toStartOf="@+id/edt_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        <Button
            android:id="@+id/btn_login"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/log_in"
            android:layout_marginTop="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="@+id/check"
            app:layout_constraintStart_toStartOf="@+id/check"
            app:layout_constraintTop_toBottomOf="@+id/check" />

        <TextView
            android:id="@+id/tv_regis"
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question_signup"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <Button
            android:id="@+id/btn_signup"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/sign_up"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_regis"
            app:layout_constraintStart_toStartOf="@+id/tv_regis"
            app:layout_constraintTop_toBottomOf="@+id/tv_regis" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tv_regis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edt_email"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>